Release CMTK-2.1.2:

(r3847) Added: "lvote" local voting tool can now normalize local, patch-based
    similarity scores with global image-to-atlas correlations.
(r3837) Added: "fit_spline_xform" tool to fit B-spline free-form deformation
    to pixel-wise deformation field  .
(r3821) Added: "groupwise_warp" tool can now protect regions from deformation
    if an "exclusion" mask is provided.
(r3814) Added: label combination by locally-weighted voting and local
    shape-based averaging (tools "lvote" and "lsba") has been moved out of the
    "Unstable" library and added to the default CMTK build set.
(r3805) Added: script for creating all officially distributed MacOS builds is
    now included as core/scripts/PackageMacOS
(r3799) Fixed: prevent empty region traversal in cmtk::RegionIndexIterator
(r3751) Fixed: "groupwise_affine" was not actually using template image
    specified on the command line.
(r3730) Fixed: histogram-based intensity matching should preserve intensity
    range.
(r3728) Added: "groupwise_init" tool can now center aligned image ensemble
    inside template field of view ("--center-template" command line switch).
(r3722) Added: "registrationx" tool can now compute transformations restricted
    to in-plane components for a selected plane (xy, xz, or yz). This is
    useful for eddy current distortion correction in EPI unwarping,
(r3719) Added: new "correct_dwi_distortion" script applies distortion
    correction to an entire series of diffusion-weighted images.


Release CMTK-2.1.1 (2012-01-10):

(r3711) Added: new "epiunwarp" tool implements an algorithm by Holland et
    al. (NeuroImage 2010) for unwarping echo-planar MR images (e.g., DWI)
    using two images acquired with reversed phase encoding direction.
(r3698) Changed: by default, "dcm2image" now embeds concatenated DICOM tags
    StudyID and StudyDate into "description" fields of Analyze, NIFTI, and
    Nrrd output images. 