@@ -1,0 +1,4 @@
+0.938428	0.0169465	-0.0264368	0	
+-0.013095	0.926067	0.128793	0	
+0.0298431	-0.134882	0.972881	0	
+4.39006	18.9879	-7.3448	1	
