@@ -1,0 +1,4 @@
+0.938428	-0.013095	0.0298431	4.39006	
+0.0169465	0.926067	-0.134882	18.9879	
+-0.0264368	0.128793	0.972881	-7.3448	
+0	0	0	1	
